--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="../css/main.css" />
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <script src="js/bootstrap.bundle.min.js"></script>
   </head>
   <body
     class="bg-pink-300 d-flex align-items-center justify-content-center min-vh-100"
