--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           class="col-md-4 d-flex justify-content-center align-items-center mb-4 mb-md-0"
         >
           <img
-            src="../img/passbear_new.png"
+            src="img/passbear_new.png"
             alt="Logo"
             class="img-fluid"
             style="max-width: 100%; max-height: 400px; object-fit: contain"
