Changes to structure

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </div>
     <!-- Link to script.js -->
-    <script type="module" src="../js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
     <script
       defer
       src="https://static.cloudflareinsights.com/beacon.min.js"
