--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/bootstrap-icons.css"
     <script src="js/bootstrap.bundle.min.js"></script>
   </head>
   <body
