--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Generator</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png" />
+    <meta
+      name="description"
+      content="PassBear - Making password generation easy and secure for better online protection."
+    />
     <link rel="stylesheet" href="css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
