--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Password Generator</title>
+    <title>PassBear - Simple password generator</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png" />
     <meta
       name="description"
