--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
     </div>
     <!-- Link to script.js -->
     <script type="module" src="js/script.js"></script>
+    <!-- Cloudflare Web Analytics -->
     <script
       defer
       src="https://static.cloudflareinsights.com/beacon.min.js"
       data-cf-beacon='{"token": "f8b5f69e46634d37af68188b12619f66"}'
     ></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
