Added footer and changed JS code

--- a/index.html
+++ b/index.html
@@ -106,8 +106,26 @@
             </button>
           </form>
         </div>
+        <footer class="bg-dark text-white py-3 fixed-bottom">
+          <div
+            class="container d-flex justify-content-center align-items-center"
+          >
+            <small class="d-flex align-items-center">
+              &copy; 2025 PassBear. All rights reserved.
+              <span class="mx-2">|</span>
+              <a
+                href="https://github.com/ziampas/password-generator-v2"
+                target="_blank"
+                class="text-white text-decoration-underline mx-2 d-flex align-items-center"
+              >
+                <i class="bi bi-github fs-5 me-2"></i> View on GitHub
+              </a>
+            </small>
+          </div>
+        </footer>
       </div>
     </div>
+
     <!-- Link to script.js -->
     <script type="module" src="js/script.js"></script>
     <!-- Cloudflare Web Analytics -->
