Changes to sitemap and index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png" />
     <meta
       name="description"
-      content="PassBear - Making password generation easy and secure for better online protection."
+      content="PassBear.net - Making password generation easy and secure for better online protection."
     />
     <link rel="stylesheet" href="css/main.css" />
     <link
@@ -34,7 +34,7 @@
         <div
           class="col-md-4 d-flex justify-content-center align-items-center mb-4 mb-md-0"
         >
-          <a href="https://passbear.me">
+          <a href="https://passbear.net">
             <img
               src="img/passbear_new.png"
               alt="Logo"
@@ -128,12 +128,5 @@
 
     <!-- Link to script.js -->
     <script type="module" src="js/script.js"></script>
-    <!-- Cloudflare Web Analytics -->
-    <script
-      defer
-      src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "f8b5f69e46634d37af68188b12619f66"}'
-    ></script>
-    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
