--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     />
     <script src="js/bootstrap.bundle.min.js"></script>
   </head>
-  <body
-    class="bg-pink-300 d-flex align-items-center justify-content-center min-vh-100"
-  >
+  <body class="bg-pink-300 d-flex flex-column min-vh-100">
     <header class="position-fixed top-0 end-0 p-3 z-index-10">
       <!-- Dark mode toggle icon (moon icon) -->
       <i
@@ -28,7 +26,9 @@
       ></i>
     </header>
 
-    <div class="container">
+    <main
+      class="flex-grow-1 container d-flex align-items-center justify-content-center"
+    >
       <div class="row w-100 justify-content-center">
         <!-- Left Div: Logo -->
         <div
@@ -46,9 +46,6 @@
 
         <!-- Right Div: Form -->
         <div class="col-md-4 form-card">
-          <!-- Icon for the form header -->
-          <!-- <h5>Generate your password</h5> -->
-
           <form id="password-form">
             <div class="mb-3 mt-3">
               <input
@@ -106,25 +103,24 @@
             </button>
           </form>
         </div>
-        <footer class="bg-dark text-white py-3 fixed-bottom">
-          <div
-            class="container d-flex justify-content-center align-items-center"
-          >
-            <small class="d-flex align-items-center">
-              &copy; 2025 PassBear. All rights reserved.
-              <span class="mx-2">|</span>
-              <a
-                href="https://github.com/ziampas/password-generator-v2"
-                target="_blank"
-                class="text-white text-decoration-underline mx-2 d-flex align-items-center"
-              >
-                <i class="bi bi-github fs-5 me-2"></i> View on GitHub
-              </a>
-            </small>
-          </div>
-        </footer>
       </div>
-    </div>
+    </main>
+
+    <footer class="bg-dark text-white py-3 mt-auto">
+      <div class="container d-flex justify-content-center align-items-center">
+        <small class="d-flex align-items-center text-center flex-wrap">
+          &copy; 2025 PassBear. All rights reserved.
+          <span class="mx-2">|</span>
+          <a
+            href="https://github.com/ziampas/password-generator-v2"
+            target="_blank"
+            class="text-white text-decoration-underline mx-2 d-flex align-items-center"
+          >
+            <i class="bi bi-github fs-5 me-2"></i> View on GitHub
+          </a>
+        </small>
+      </div>
+    </footer>
 
     <!-- Link to script.js -->
     <script type="module" src="js/script.js"></script>
