--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <footer class="bg-dark text-white py-3 mt-auto">
       <div class="container d-flex justify-content-center align-items-center">
         <small class="d-flex align-items-center text-center flex-wrap">
-          &copy; 2025 PassBear. All rights reserved.
+          &copy; 2025 PassBear
           <span class="mx-2">|</span>
           <a
             href="https://github.com/ziampas/password-generator-v2"
